# plsr

./: .gitignore  README.md  pyproject.toml
configs/k8s/: ClusterIssuer.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistent-volume-claim.yaml  secret.yaml  service.yaml  statefulset.yaml
plsr/: __init__.py  __main__.py  app.py  aws.py  bootstrap.py  build.py  cli.py  console.py  db_migrate.py  helm_release.py  k8s.py  pyvenv.py  run_host.py  run_local.py  update.py
src/plsr/: __init__.py  __main__.py
src/plsr/app/: __init__.py  run.py
src/plsr/aws/: __init__.py
src/plsr/core/: __init__.py  bootstrap.py  console.py  pyvenv.py
