[project]
name = "plsr"
version = "0.0.0"
description = "plsr – local dev orchestrator for microservices (CLI)"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["plsr*"]
